--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -29,3 +29,13 @@
   color: black;
   text-decoration: none;
 }
+
+/* 一覧表示画面 */
+
+.main-list {
+  height: 100vh;
+  background-color: #f2f2f3;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
